--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,69 +1,112 @@
 /* styles.css */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
+    background-color: rgb(39, 39, 39);
+    margin: 5px;
+    padding: 5px;
 }
 
 .header {
-    font-size: 24px;
+    font-size: 28px;
+    color: #ffffff;
     margin-bottom: 20px;
-    color: #333;
-}
-
-.main-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin: 20px auto;
-    width: 400px;
+    margin-left: 10px;
 }
 
 .input-container {
     display: flex;
+    width: 95%;
     flex-direction: column;
-    gap: 10px;
-    max-width: 300px;
-    width: 100%;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    margin: 10px auto;
 }
 
-#output-text {
-    width: 100%;
-    max-width: 100%;
-    height: 100px;
+.output-container {
+    display: flex;
+    width: 95%;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    margin: 10px auto;
 }
 
 .file-upload-container {
     display: flex;
+    width: 95%;
     align-items: center;
-    justify-content: center;
-    padding: 20px;
     background-color: #f0f0f0;
     border-radius: 10px;
-    margin-top: 20px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    padding: 10px;
+    margin: 10px auto;
+    transition: background-color 0.3s;
 }
 
 .file-upload-container:hover {
-    background-color: #e0e0e0;
+    background-color: #007bff;
 }
 
-.file-upload-container a {
-    color: #333;
-    text-decoration: none;
-    font-weight: bold;
+.field{
+    font-size: 18px;
+    color: #000000;
+    margin-bottom: 5px;
+    width: 97%;
+    padding: 10px;
+    border: 1px solid #505050;
+    border-radius: 5px;
+    transition: border-color 0.3s;
 }
 
-.file-upload-container a:hover {
-    text-decoration: underline;
+.field:hover{
+    outline: none;
+    border-color: #007bff;
 }
 
-.file-upload-container, .input-container, .main-container {
-    box-sizing: border-box;
+#scan-button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#scan-button:hover {
+    background-color: #0056b3;
+}
+
+#input-text {
+    width: 90%;
+    height: 100px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: none;
+    transition: border-color 0.3s;
+}
+
+#input-text:focus {
+    outline: none;
+    border-color: #007bff;
+}
+
+#output-text {
+    width: 90%;
+    height: 100px;
+    padding: 10px 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: none;
+    transition: border-color 0.3s;
+}
+
+#output-text:focus {
+    outline: none;
+    border-color: #007bff;
 }
