--- a/assets/styles.css
+++ b/assets/styles.css
@@ -54,8 +54,8 @@ body {
     font-size: 18px;
     color: #000000;
     margin-bottom: 5px;
-    width: 97%;
-    padding: 10px;
+    width: 99%;
+    padding: 5px;
     border: 1px solid #505050;
     border-radius: 5px;
     transition: border-color 0.3s;
@@ -71,6 +71,7 @@ body {
     color: #fff;
     border: none;
     border-radius: 5px;
+    width: 100%;
     padding: 10px;
     font-size: 16px;
     cursor: pointer;
@@ -81,8 +82,25 @@ body {
     background-color: #0056b3;
 }
 
+#gen-button {
+    background-color: #40ff00;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    width: 100%;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#gen-button:hover {
+    background-color: #008e0e;
+}
+
 #input-text {
-    width: 90%;
+    align-self: center;
+    width: 99%;
     height: 100px;
     padding: 5px;
     border: 1px solid #ccc;
@@ -97,9 +115,10 @@ body {
 }
 
 #output-text {
-    width: 90%;
+    align-self: center;
+    width: 100%;
     height: 100px;
-    padding: 10px 15px;
+    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     resize: none;
